<resources>
    <string name="app_name">CHaRM</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="dont_have_account">Don\'t have an account? Register Here</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="no_account_login">Enter app and create an account later</string>

    <!-- Strings related to registration -->
    <string name="create_account">Create a new account</string>
    <string name="first_name">First Name</string>
    <string name="first_name_colon">First Name:</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_colon">Last Name:</string>
    <string name="name_colon">Name:</string>
    <string name="email_colon">Email:</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <!-- Strings related to Registration Exceptions -->
    <string name="reg_invalid_email">There must be an "@" sign in your email</string>
    <string name="reg_invalid_password">Passwords must at least be 6 characters in length</string>
    <string name="reg_empty_email">Please enter an email</string>

    <!-- Navigation header and toolbar header strings -->
    <string name="nav_home_option">Home</string>
    <string name="nav_map_option">Map</string>
    <string name="nav_recycle_option">Recycle</string>
    <string name="nav_settings_option">Settings</string>
    <string name="nav_info_option">Info</string>
    <string name="toolbar_edit_zip">Edit Zip</string>

    <!-- Home screen strings -->
    <string name="home_button_donate">Donate to CHaRM on our webpage</string>
    <string name="home_txt_charm_stats_header">CHaRM 2018 Stats</string>

    <!-- Info screen strings -->
    <string name="info_title_what_is_charm">What is CHaRM?</string>
    <string name="info_charm_definition"><b>CHaRM</b> stands for The <b>C</b>enter for <b>H</b>ard to <b>R</b>ecycle <b>M</b>aterials. It is a permanent drop-off facility that aims to improve our environmental health by encouraging reuse and diverting thousands of pounds of household hazardous waste, bulky trash and other hard to recycle items from Metro-Atlanta landfills and water systems.</string>
    <string name="info_title_benefits">CHaRM’s Benefits to the Community</string>
    <string name="info_benefits_list">1) Easily accessible and convenient location.\n2) Accepts a wider range of items than typical curbside recycling.\n3) Provides educational sessions about the importance of proper disposal of hard to recycle materials.\n4) Keeps hazardous materials out of our air, water, and soil.</string>
    <string name="info_hours_title">Hours of operation</string>
    <string name="info_hours">Tuesday and Thursday (9am - 4pm)\n Saturday (8am - 3pm)</string>
    <string name="info_fall_closings_title">Fall Closings</string>
    <string name="info_fall_closings">Thursday October 4th (closing at noon)</string>
    <string name="info_address_title">Address:</string>
    <string name="info_address">1110 Hill Street\nSE Atlanta, GA. 30315</string>
    <string name="info_phone_number_title">Phone Number:</string>
    <string name="info_phone_number">404-600-6386</string>
    <string name="info_contact_info_title">Contact Information</string>

    <!-- Zip Dialog screen -->
    <string name="zip_title">Please enter your home zip code:</string>
    <string name="zip_title_edit">Change your home zip code:</string>
    <string name="zip_submit">Submit</string>
    <string name="zip_hint">30318</string>

    <!-- Donate Dialog screen -->
    <string name="donate_payment">Amount to Donate:</string>
    <string name="donate_amount_hint">5.65</string>
    <string name="donate_note">Note:</string>
    <string name="donate_note_hint">Add a note here</string>
    <string name="donate_empty_amount">Please add a donation amount</string>
    <string name="donate_submit">Submit</string>
    <string name="donate_cancel">Cancel</string>


    <!-- Preferences -->
    <string name="pref_preferences">preferences</string>
    <string name="pref_zipcode">zipcode</string>

    <!-- Recycle screen strings -->
    <string name="recycle_zip">Your zip code:</string>
    <string name="recycle_donate_item">Recycle a new Item</string>
    <string name="recycle_donate_item_title">Recycle Item</string>
    <string name="recycle_btn_recycle_list">Recycle all Items</string>
    <string name="recycle_donation_success">Thank you</string>
    <string name="recycle_donation_error">There was an error</string>
    <string name="recycle_description_hint">Add a description...</string>
    <string name="recycle_add_button">Add Item</string>
    <string name="recycle_hold_to_delete">Hold an item to remove it</string>
    <string name="recycle_items_to_recycle">Items to recycle</string>

</resources>
